--- a/style.css
+++ b/style.css
@@ -1,21 +1,250 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Grotesk:wght@300..700&display=swap'); 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-.container{
-    width: 1240px;
-    margin: 0 auto;
+.head-block{
+    background-color:#F2F2F2 ;
+    height: 600px;
 }
+.logo-img{
+    width: 130px;
+    height: 40px;
+}
+.header{
+    margin: auto;
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #F2F2F2;
+    height: 80px;
 
-header{
-    background-image: url("./img/backimg.png");
+}
+.texts{
+    display: flex;
+    gap: 48px;
+}
+.texts-text{
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+.button{
+    display: flex;
+    gap: 28px;
+}
+.button-btn-1{
+    background-color: #fff;
+    color: black;
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 7px 0px #00000026;
+
+}
+.texts-logo{
+    width: 20px;
+    height: 20px;
+}
+.button-btn{
+    box-shadow: 0px 4px 7px 0px #00000026;
+    width: 162px;
+    height: 40px;
+    color: black;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    align-items: center;
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+.header-main{
+    /* background-image: url(interactive.png);
     background-repeat: no-repeat;
-    background-size: cover;
-    object-fit: cover;
-    height: 100vh;
+    background-size: 100%;
+    width: 100%;
+    background-clip: border-box; */
 }
+.header-main-img{
+    width: 100%;
+    height: 100%;
+    z-index: -3;
+}
+.main-title{
+    margin: auto;
+    width: 506px;
+    font-family: Inter;
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 44px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    z-index: 3;
+    margin-top: -400px;
+}
+.main-text{
+    margin: auto;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 448px    ;
+    margin-top: 44px;
+}
+.main-btn{
+    position: relative;
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 16px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 171px;
+    height: 40px;
+    border: 2px solid  #00f5ab78;
+    background-color: #10BB87;
+    color: white;
+    box-shadow: 0px 9px 25px -4px #487B6C80;
+    margin-top: 28px;
+    transition: all 0.5s ease-in;
+   
+    left: 680px;
+}
+.main-btn:hover{
+    background-color: #FFA630;
+
+}
+span{
+    text-decoration: 7px underline #FFA630;
+}
+.container{
+    width: 65%;
+    margin: auto;
+    margin-top: 140px;
+    padding-bottom: 128px;
+    display: flex;
+    border-bottom: 1px solid #F2F2F2;
+}
+.ong-texts-title{
+    width: 448px;
+    font-family: Inter;
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 44px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+.ong-texts-text{
+    width: 352px;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 44px;
+}
+.ong-texts-btn{
+    width: 131px;
+    height: 40px;
+    color: white;
+    background-color: #10BB87;
+    box-shadow: 0px 9px 25px -4px #487B6C80;
+    border: none;
+    margin-top: 28px;
+    cursor: pointer;
+    transition: all 0.5s ease-in;
+}
+.ong-texts-btn:hover{
+    background-color: #FFA630;
+}
+.grid{
+    width: 65%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+}
+.grid-div-title{
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #000000;
+    margin-top: 10px;
+}
+.grid-div-text{
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #B3B3B3;
+    margin-top: 10px;
+    width: 182px;
+}
+@media screen and (max-width: 1290px) {
+
+    .texts{
+        gap: 25px;
+    }
+    .header{
+        width: 98%;
+    }
+    .text-1{
+        display: none;
+    }
+    .main-title{
+        margin-top: -300px;
+    }
+    .main-btn{
+        left: 550px;
+    }
+}
+@media screen and (max-width: 1100px) {
+
+    .main-btn{
+        left: 450px;
+    }
+    
+}
+@media screen and (max-width: 1150px) {
+    .container{
+        width: 90%;
+        margin-left: 80px;
+    }
+    .grid{
+        width: 85%;
+    }
+}
+@media screen and (max-width: 1000px) {
+    .main-btn{
+        left: 415px;
+    }
+}
+@medi
