--- a/style.css
+++ b/style.css
@@ -1,250 +1,415 @@
+@import url("https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Grotesk:wght@300..700&display=swap'); 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+  --font-script: "Gochi Hand";
+  --font-sans-serif: "Poppins", sans-serif;
 }
-.head-block{
-    background-color:#F2F2F2 ;
-    height: 600px;
-}
-.logo-img{
-    width: 130px;
-    height: 40px;
-}
-.header{
-    margin: auto;
-    width: 75%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #F2F2F2;
-    height: 80px;
 
+body {
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-width: 300px;
+  height: 100vh;
+  margin: 0;
+  background: linear-gradient(to bottom, #20202c 0%, #515175 100%);
+  color: #ffffff;
+  font-family: var(--font-sans-serif);
 }
-.texts{
-    display: flex;
-    gap: 48px;
-}
-.texts-text{
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 20px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-}
-.button{
-    display: flex;
-    gap: 28px;
-}
-.button-btn-1{
-    background-color: #fff;
-    color: black;
-    border: none;
-    width: 40px;
-    height: 40px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 7px 0px #00000026;
 
+.font-sans-serif {
+  font-family: var(--font-sans-serif);
+  font-weight: 200;
+  font-size: 0.75em;
 }
-.texts-logo{
-    width: 20px;
-    height: 20px;
+
+.font-script {
+  font-family: var(--font-script);
 }
-.button-btn{
-    box-shadow: 0px 4px 7px 0px #00000026;
-    width: 162px;
-    height: 40px;
-    color: black;
-    background-color: white;
-    border: none;
-    border-radius: 10px;
-    align-items: center;
-    font-family: Inter;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 16px;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
+
+.header {
+  position: relative;
+  text-align: center;
+  margin-bottom: 60px;
 }
-.header-main{
-    /* background-image: url(interactive.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
+
+.newYear {
+  font-family: var(--font-script);
+  font-size: calc(2rem + 5vw);
+  line-height: 1;
+  letter-spacing: 0.02em;
+  background: repeating-linear-gradient(
+    45deg,
+    #d80e13,
+    #d80e13 10px,
+    #ffffff 10px,
+    #ffffff 20px
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  text-shadow: 0 3px 6px rgba(0, 0, 0, 0.24), 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+}
+
+.title,
+.countdown {
+  font-family: var(--font-sans-serif);
+  text-transform: uppercase;
+  font-weight: 200;
+  letter-spacing: 0.4em;
+  line-height: 1;
+  margin: 0 0 1.5em;
+  padding: 0;
+  font-size: 1.3rem;
+  position: relative;
+}
+
+.title {
+  font-size: 1rem;
+  &:before,
+  &:after {
+    content: " ***** ";
+    font-size: 0.75rem;
+    letter-spacing: 0.25em;
+    color: #bad594;
+  }
+}
+
+.countdown {
+  display: flex;
+  gap: 0.35em;
+  justify-content: space-between;
+  max-width: 330px;
+  margin: 0 auto;
+}
+
+
+$numberOfSnowflake: 250; // update together with js
+$numberOfSnowflakeMd: 50; // update together with js
+$numberOfSnowflakeLg: 50; // update together with js
+
+.winter-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.snowflake {
+  position: absolute;
+  top: -2vh;
+  font-size: 2rem;
+  animation: fall linear infinite;
+  opacity: 0.8;
+}
+
+.snowflake {
+  position: absolute;
+  z-index: 5;
+  font-size: 10px;
+  width: 2px;
+  height: 2px;
+  border-radius: 100%;
+  background-color: #fff;
+  &._md {
+    width: 3px;
+    height: 3px;
+  }
+  &._lg {
+    width: 5px;
+    height: 5px;
+  }
+  @for $i from 1 through $numberOfSnowflake {
+    $fall-duration: random_range(10, 30);
+    &._sm-#{$i} {
+      left: random(120) - 20 + vw;
+      filter: blur((random(2)-1) + px);
+      animation: ((random(100) + 50)/5) +
+        s
+        fall
+        (random(100) / -5) +
+        s
+        infinite;
+    }
+  }
+  @for $i from 1 through $numberOfSnowflakeMd {
+    &._md-#{$i} {
+      left: random(120) - 20 + vw;
+      filter: blur((random(2)-1) + px);
+      animation: ((random(100) + 50)/5) +
+        s
+        fall
+        (random(100) / -5) +
+        s
+        infinite;
+    }
+  }
+  @for $i from 1 through $numberOfSnowflakeLg {
+    &._lg-#{$i} {
+      left: random(120) - 20 + vw;
+      animation: ((random(100) + 50)/5) +
+        s
+        fall
+        (random(100) / -5) +
+        s
+        infinite;
+    }
+  }
+}
+
+@keyframes flickr {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+}
+
+@keyframes fall {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(20vw, 110vh);
+  }
+}
+
+.ground {
+  border-top-right-radius: 71vw 40px;
+
+  position: absolute;
+  width: 73vw;
+  height: 61px;
+
+  left: 0;
+  bottom: 0;
+
+  background: white;
+
+  &:before {
+    border-radius: 50%;
+
+    content: " ";
+    position: absolute;
+
+    width: 71vw;
+    height: 100px;
+
+    top: 10px;
+    right: -33vw;
+
+    background: white;
+  }
+
+  &:after {
+    border-radius: 50%;
+
+    content: " ";
+    position: absolute;
+
+    width: 38vw;
+    height: 70px;
+
+    top: 5px;
+    right: -41vw;
+
+    background: white;
+  }
+}
+
+
+.candy {
+  position: absolute;
+  height: 20px;
+  background-color: #add8e6;
+  border-radius: 50%;
+  pointer-events: none;
+  animation: explode 1.25s ease-out forwards;
+}
+
+@keyframes explode {
+  0% {
+    transform: scale(0.5) translate(0, 0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.2) translate(var(--x), var(--y));
+    opacity: 0;
+  }
+}
+.mailbox {
+  position: absolute;
+  z-index: 1;
+  right: 5vw;
+  bottom: 45px;
+  width: 120px;
+  height: 170px;
+  cursor: pointer;
+  .basis {
+    position: absolute;
+    width: 16px;
+    height: 65px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #222;
+  }
+  .box {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    background-clip: border-box; */
-}
-.header-main-img{
+    height: 130px;
+    background: #d71536;
+    border-radius: 0 0 7px 7px;
+    border: 5px solid #b90b21;
+    &:before {
+      content: "";
+      position: absolute;
+      bottom: calc(100% + 5px);
+      left: -15px;
+      right: -15px;
+      height: 20px;
+      border-radius: 7px;
+      background-color: #b90b21;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      right: -5px;
+      height: 5px;
+      background-color: #600307;
+    }
+  }
+  .box-title {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 5px;
+    text-align: center;
+    font-size: 1.25rem;
+    line-height: 1em;
+  }
+  .letters {
+    overflow: hidden;
+    position: absolute;
+    z-index: 1;
     width: 100%;
-    height: 100%;
-    z-index: -3;
+    height: 85px;
+    top: -50px;
+    left: 0;
+    right: 0;
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 15px;
+      width: 75px;
+      background: #600307;
+      border-radius: 5px;
+    }
+  }
+  .letter {
+    overflow: hidden;
+    position: absolute;
+    z-index: 1;
+    border-radius: 2px;
+    .letter-image {
+      position: absolute;
+    }
+  }
+  .letter-first {
+    width: 70px;
+    height: 42px;
+    top: 50px;
+    left: 10px;
+    transform: rotate(80deg);
+    .letter-image {
+      top: -3px;
+      left: -4px;
+      width: calc(100% + 10px);
+    }
+  }
+  .letter-second {
+    width: 70px;
+    height: 45px;
+    top: 65px;
+    right: 12px;
+    transform: rotate(100deg);
+    .letter-image {
+      top: 0;
+      left: 0;
+      width: 100%;
+    }
+  }
 }
-.main-title{
-    margin: auto;
-    width: 506px;
-    font-family: Inter;
-    font-size: 36px;
-    font-weight: 600;
-    line-height: 44px;
-    text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    z-index: 3;
-    margin-top: -400px;
+.mailbox-shadow {
+  z-index: 10;
+  position: absolute;
+  right: 5vw;
+  bottom: 85px;
+  width: 120px;
+  height: 150px;
+  cursor: pointer;
+  opacity: 0;
 }
-.main-text{
-    margin: auto;
-    font-family: Inter;
-    font-size: 14px;
+.mail {
+  width: 60vw;
+  min-width: 300px;
+  padding: 15px;
+  line-height: 1.2;
+  font-family: var(--font-sans-serif);
+  font-weight: 200;
+  border-width: 0;
+  background: repeating-linear-gradient(
+    -45deg,
+    #f6ebd8,
+    #f6ebd8 20px,
+    #41945f 20px,
+    #41945f 40px,
+    #f6ebd8 40px,
+    #f6ebd8 60px,
+    #c44141 60px,
+    #c44141 80px
+  );
+  .mail-inner {
+    padding: 15px;
+    background: #f6ebd8;
+  }
+  p + p {
+    margin-top: 0.75em;
+  }
+  .font-script {
+    font-size: 1.25em;
+  }
+  .mail-title {
     font-weight: 400;
-    line-height: 20px;
-    text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    width: 448px    ;
-    margin-top: 44px;
-}
-.main-btn{
-    position: relative;
-    font-family: Inter;
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 16px;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    width: 171px;
-    height: 40px;
-    border: 2px solid  #00f5ab78;
-    background-color: #10BB87;
-    color: white;
-    box-shadow: 0px 9px 25px -4px #487B6C80;
-    margin-top: 28px;
-    transition: all 0.5s ease-in;
-   
-    left: 680px;
-}
-.main-btn:hover{
-    background-color: #FFA630;
-
-}
-span{
-    text-decoration: 7px underline #FFA630;
-}
-.container{
-    width: 65%;
-    margin: auto;
-    margin-top: 140px;
-    padding-bottom: 128px;
-    display: flex;
-    border-bottom: 1px solid #F2F2F2;
-}
-.ong-texts-title{
-    width: 448px;
-    font-family: Inter;
-    font-size: 36px;
-    font-weight: 600;
-    line-height: 44px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-}
-.ong-texts-text{
-    width: 352px;
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    margin-top: 44px;
-}
-.ong-texts-btn{
-    width: 131px;
-    height: 40px;
-    color: white;
-    background-color: #10BB87;
-    box-shadow: 0px 9px 25px -4px #487B6C80;
-    border: none;
-    margin-top: 28px;
-    cursor: pointer;
-    transition: all 0.5s ease-in;
-}
-.ong-texts-btn:hover{
-    background-color: #FFA630;
-}
-.grid{
-    width: 65%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-
-}
-.grid-div-title{
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 20px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: #000000;
-    margin-top: 10px;
-}
-.grid-div-text{
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: #B3B3B3;
-    margin-top: 10px;
-    width: 182px;
-}
-@media screen and (max-width: 1290px) {
-
-    .texts{
-        gap: 25px;
+  }
+  .mail-close {
+    position: absolute;
+    top: 28px;
+    right: 28px;
+    width: 25px;
+    height: 25px;
+    border-radius: 100%;
+    border: 0;
+    background: transparent;
+    transition: transform 0.3s;
+    &:hover {
+      transform: rotate(180deg);
     }
-    .header{
-        width: 98%;
-    }
-    .text-1{
-        display: none;
-    }
-    .main-title{
-        margin-top: -300px;
-    }
-    .main-btn{
-        left: 550px;
-    }
+  }
 }
-@media screen and (max-width: 1100px) {
-
-    .main-btn{
-        left: 450px;
-    }
-    
-}
-@media screen and (max-width: 1150px) {
-    .container{
-        width: 90%;
-        margin-left: 80px;
-    }
-    .grid{
-        width: 85%;
-    }
-}
-@media screen and (max-width: 1000px) {
-    .main-btn{
-        left: 415px;
-    }
-}
-@medi
